# projekt_food_waste

./: .gitignore  Aufgaben.txt  Bibliotheken.txt  Food_Waste_Tracker_V6.py  README.md  README_INTERN.md  README_RUN_EXAMPLE.py  analyse.py  data.csv  daten.csv  pyproject.toml
basic/: analytics.py  app.py  coverage.txt  data.csv  data.jsonl  importer.py  main.py  models.py  storage.py  test_file.py  utils.py
programm/: analyse.py  create.py  data.csv  main.py  test_analyse.py  test_data.csv  test_main.py
simple/: README.md  analytics.py  app.py  data.jsonl  importer.py  main.py  models.py  storage.py  utils.py
src/food_waste_tracker/: __init__.py  __main__.py  analytics.py  cli.py  importers.py  models.py  storage.py  utils.py
src/food_waste_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_analyse.py  test_create.py  test_tracker.py  test_tracker_unit.py
